--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,9 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
     /*fast android Networking 라이브러리*/
 
-    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
-    /*OKHttp3 라이브러리*/
-
-    implementation 'com.loopj.android:android-async-http:1.4.10'
-    /*AsyncHttp 라이브러리*/
-
-    implementation 'com.android.volley:volley:1.1.1'
-    /*Volley 라이브러리*/
+    implementation 'com.squareup.okhttp3:okhttp:4.4.0'  /*OKHttp3 라이브러리*/
+    implementation 'com.loopj.android:android-async-http:1.4.10' /*AsyncHttp 라이브러리*/
+    implementation 'com.android.volley:volley:1.1.1' /*Volley 라이브러리*/
+    implementation 'com.github.bumptech.glide:glide:4.9.0' /*Glide 라이브러리*/
+    implementation 'com.squareup.picasso:picasso:2.71828' /*Picasso 라이브러리*/
 }
